--- a/views/update.pug
+++ b/views/update.pug
@@ -16,7 +16,7 @@ html(lang="en")
                 label(for="genre") Genre
                 input(type="text" name="genre" required)
 
-                abel(for="species") Species
+                label(for="species") Species
                 input(type="text" name="species" required)
                 input(type="submit" value="Submit")
                 br
