--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,7 +55,7 @@ input[type="submit"] {
     border: none;
     padding: .375rem 1rem;
     margin-top: 10px;
-    color: #ddd;
+    color: #ffffff;
 }
 
 
