--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -9,7 +9,7 @@ html(lang="en")
         if data.length
             .card
                 .table-header
-                    a(href="/update-cobj") ➕ Add to this table
+                    a(href="/update-cobj") Add to this table
                 table
                     thead
                         tr
