--- a/views/update.pug
+++ b/views/update.pug
@@ -20,4 +20,4 @@ html(lang="en")
                 input(type="text" name="species" required)
                 input(type="submit" value="Submit")
                 br
-                a(href="/") ⬅ Back to Homepage
+                a(href="/") Return to the homepage
